# django-walrus

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_walrus.py  walrus.py
.github/workflows/: python-django-matrix.yml
src/walrus/: apps.py
